# Work_Text

./: Data_Geral.xlsx  Data_Local.xlsx  README.md  Resultado_Treinamento8Data_Geral.xlsx  pyproject_home2.md  req.txt
B3/: CNFB3.xlsx  Caminho Coleta Formulário de Referência B3.docx  pyproject.toml  requerimentos.txt
B3/Códigos/Extractor/: saida 030625.txt  saida.txt  version1.py  version2.py  version3.py
B3/Códigos/Extractor/source/: get_colors.py  mouse_position.py
B3/Códigos/Parte2/Desenvolvimento/: coletar_dados1.py
B3/Códigos/Parte2/source/: get_colors.py  mouse_position.py  sourcescreen.py
B3/data_statistics/: order1.ipynb
Erros/: Erro_Geral_Acumulado.xlsx  Erro_Local.xlsx
Notas/: Filtro Coleta VG.docx  Regras para Exclusão no Python 2.docx  Regras para Exclusão no Python.docx  Regras para Inclusão no Python 2.docx  Regras para Inclusão no Python.docx
Pass/: Cias não financeiras - 12-12-2022.xlsx  Cias nível diferenciado governança - 10-02-2023.xlsx
Resultado_Treinamento8/: CABI3B.xlsx  CMIN3.xlsx  CMSA4.xlsx  CNSY3.xlsx  COCE6.xlsx  CPFE3.xlsx  CPLE5.xlsx  Data_Local.xlsx  Erro_CABI3B_2012.txt  Erro_CABI3B_2013.txt  Erro_CABI3B_2014.txt  Erro_CABI3B_2015.txt  Erro_CABI3B_2016.txt  Erro_CABI3B_2017.txt  Erro_CABI3B_2019.txt  Erro_CABI3B_2020.txt  Erro_CABI3B_2021.txt  Erro_CALI3_2016.txt  Erro_CALI3_2017.txt  Erro_CALI3_2019.txt  Erro_CALI4_2016.txt  Erro_CALI4_2017.txt  Erro_CMSA3_2012.txt  Erro_CMSA3_2016.txt  Erro_CMSA3_2020.txt  Erro_CMSA4_2015.txt  Erro_CMSA4_2017.txt  Erro_CMSA4_2021.txt  Erro_CNSY3_2018.txt  Erro_COCE3_2013.txt  (+36 more)
(+2728 files in other folders)
