[project]
name = "b3"
version = "0.1.0"
description = ""
authors = [
    {name = "Oziel Junior ",email = "58310583+oziieljuniior@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
